apps/immichframe/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immichframe-ingress
  namespace: immich
spec:
  rules:
    - host: immichframe.home.kadin.codes
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: immichframe
                port:
                  number: 8080
